tests/anp_test_9_swapping_rules/anp.yaml
# policy reference:
# https://github.com/kundan2707/network-policy-api/blob/master/conformance/base/admin_network_policy/core-gress-rules-combined.yaml
# swapped some rules
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: gress-rules-with-swapped-rules
spec:
  priority: 15
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  egress:
  - name: "deny-to-ravenclaw-everything" # swapped with allow-to-ravenclaw-everything
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "allow-to-ravenclaw-everything"
    action: "Allow"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-to-ravenclaw-everything"
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-to-slytherin-at-port-80-53-9003" # swapped with deny-to-slytherin-at-ports-80-53-9003
    action: "Pass"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-to-slytherin-at-ports-80-53-9003"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003  
  - name: "allow-to-hufflepuff-at-ports-8080-5353"
    action: "Allow"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    ports:
      - portNumber:
          protocol: TCP
          port: 8080
      - portNumber:
          protocol: UDP
          port: 5353
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-to-hufflepuff-everything-else"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
  ingress:
  - name: "deny-from-ravenclaw-everything" # swapped with allow-from-ravenclaw-everything
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "allow-from-ravenclaw-everything"
    action: "Allow"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-from-ravenclaw-everything"
    action: "Pass"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-from-slytherin-at-port-80-53-9003" # swapped with deny-from-slytherin-at-port-80-53-9003
    action: "Pass"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-from-slytherin-at-port-80-53-9003"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "allow-from-hufflepuff-at-port-80-5353-9003"
    action: "Allow"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 5353
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-from-hufflepuff-everything-else"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
